[package]
name = "ica-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["staking"] }

# neutron deps
# neutron_bindings = { path = "github.com/neutron-org/neutron/packages/bindings" }
neutron-sdk = { path = "../neutron-sdk/packages/neutron-sdk", default-features = false, version = "0.4.0" }
cosmos-sdk-proto = { version = "0.12.2", default-features = false }
protobuf = { version = "3", features = ["with-bytes"] }
